# Sustify

./: CMakeLists.txt  CMakePresets.json  MusicStreamingApp.cpp  MusicStreamingApp.h  README.md  resources.rc
gui/: index.css  index.html  index.js  test.html
headers/: audio.h  bindings.h  file_system.h  main.h  queue.h  window.h
include/: window.cpp
src/: audio.cpp  bindings.cpp  file_system.cpp  main.cpp  queue.cpp  window.cpp
